Update task_2 heartrate label to sepsis label

--- a/task_2/task_2.ipynb
+++ b/task_2/task_2.ipynb
@@ -63491,9 +63491,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original shape:  (18995, 172)\n",
+      "For LABEL_BaseExcess: (18995, 20) [False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False  True\n",
+      " False False False False False False  True  True False False False False\n",
+      " False  True False False False  True False False False  True False False\n",
+      " False False False  True False False False False False  True False False\n",
+      " False False False False False False False False False False False  True\n",
+      " False False False False False  True False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False  True False False\n",
+      " False False False False False False False False False False False  True\n",
+      " False False False False False False False False False False  True False\n",
+      "  True  True False False False False False  True False False False  True\n",
+      " False False False  True False False False False False  True False False\n",
+      " False False False  True]\n",
+      "For LABEL_Fibrinogen: (18995, 20) [False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False  True False False False  True False False False  True False False\n",
+      " False False  True False False False False False False False False  True\n",
+      " False False False False  True False  True False False  True False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False  True False False False False False False  True False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False  True False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False  True False  True False  True\n",
+      " False False False  True False False False False  True False False False\n",
+      " False False False False False  True False False False False  True False\n",
+      "  True False False  True]\n",
+      "For LABEL_AST: (18995, 20) [ True False False False False False False False False False False False\n",
+      " False False False  True False False False False False False False False\n",
+      " False False False  True False False  True  True False False False  True\n",
+      " False False False False False False False False False False  True False\n",
+      " False False  True False False False False False False False False False\n",
+      " False False  True False False False  True False False False False False\n",
+      " False False False False False False False False False False  True False\n",
+      " False False  True False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False  True False\n",
+      " False False  True False False False False False False False False False\n",
+      " False  True  True False False False False False False False False  True\n",
+      " False False False False  True False False False  True False False False\n",
+      " False False False False False False False False False False False False\n",
+      "  True False False False]\n",
+      "For LABEL_Alkalinephos: (18995, 20) [ True False False False False False False False False False False False\n",
+      " False False False  True False False False False False False False False\n",
+      " False False False  True False False  True  True False False False  True\n",
+      " False False False False False False False False False False  True False\n",
+      " False False  True False False False False False False False False False\n",
+      " False False  True False False False  True False False False False False\n",
+      " False False False False False False False False False False  True False\n",
+      " False False  True False False False False False False False False False\n",
+      " False False False False False False False False False False False  True\n",
+      " False False False False False False False False False False  True False\n",
+      " False False  True False False False False False False False False False\n",
+      " False  True  True False False False False False False False False False\n",
+      " False False False False  True False False False  True False False False\n",
+      " False False False False False False False False False False False False\n",
+      "  True False False False]\n",
+      "For LABEL_Bilirubin_total: (18995, 20) [False False False False False False False False False False False False\n",
+      " False False False  True False False False False False False False False\n",
+      " False False False  True False False  True  True False False False  True\n",
+      " False False False False False False False False False False  True False\n",
+      " False False  True False False False False False False False False False\n",
+      " False False  True False False False  True False False False False False\n",
+      " False False False False False False False False False False  True False\n",
+      " False False  True False False False False False False False False False\n",
+      " False False False False False False False False False False False  True\n",
+      " False False False False False False False False False False  True False\n",
+      " False False  True False False False False False False False False False\n",
+      " False  True  True False False False False False False False False False\n",
+      " False False False False  True False False False  True False False False\n",
+      " False False False  True False False False False False False False False\n",
+      "  True False False False]\n",
+      "For LABEL_Lactate: (18995, 20) [False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False  True\n",
+      " False False False  True False False  True False False False False False\n",
+      " False  True False False False  True False False False  True False  True\n",
+      " False False False  True False False False False False  True False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False  True False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False  True False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False  True False False\n",
+      "  True  True False False False False False  True False False False  True\n",
+      " False False False  True False  True False False False  True False False\n",
+      " False False False  True]\n",
+      "For LABEL_TroponinI: (18995, 20) [ True False False False False False False False False False False False\n",
+      " False False False  True False False False False False False False False\n",
+      " False False False  True False False False False False False False  True\n",
+      " False False False False False False  True False False False False False\n",
+      " False  True False False False  True False False False False False False\n",
+      " False False False  True False False False  True False False False  True\n",
+      " False False False False False False False False False False  True False\n",
+      "  True False False False False False False False False False False False\n",
+      "  True False False False False  True False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False  True False False False False False False False False\n",
+      "  True False False False False False False False False False False  True\n",
+      " False False False False False False False False False  True False False\n",
+      " False  True False  True]\n",
+      "For LABEL_SaO2: (18995, 20) [False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False  True\n",
+      " False False False False False False False False False False False False\n",
+      " False  True False False False  True False False False  True False  True\n",
+      " False False False  True False False False False False  True False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False  True False False False False False  True False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False  True False False\n",
+      " False  True False False False  True False False False False False False\n",
+      " False False False False False False False False False False  True False\n",
+      " False  True False False False False False  True False False False  True\n",
+      " False False False  True False  True False False False False  True False\n",
+      " False False False  True]\n",
+      "For LABEL_Bilirubin_direct: (18995, 20) [False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False  True False False False  True False False False False\n",
+      " False False False  True False False False False False False False False\n",
+      " False False  True False False False False False False False False  True\n",
+      " False False  True False False False  True False False  True False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False  True False False False False False False  True False False\n",
+      " False False False False False False False False False False False  True\n",
+      " False False False False False False False False False False  True False\n",
+      " False False False False False False False False False False  True False\n",
+      " False False  True False False False False False False  True False False\n",
+      " False False False False False False False False  True False False False\n",
+      " False False False False False  True False False  True False False False\n",
+      "  True False False  True]\n",
+      "For LABEL_EtCO2: (18995, 20) [False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False  True\n",
+      "  True False False  True False  True  True False False False False False\n",
+      " False  True False False False False False False False False False  True\n",
+      " False False False False  True False False False  True  True  True False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False  True False False\n",
+      " False False False False False False False False  True False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False  True False False False False False False False False False False\n",
+      " False False False False False False  True False False  True False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False  True False  True False False False False False False\n",
+      " False False  True  True]\n",
+      "For LABEL_Sepsis: (18995, 20) [False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False  True\n",
+      " False  True False  True False False  True False False False  True False\n",
+      " False  True False False False  True False False False False False False\n",
+      " False False False  True False False False False False  True False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False  True False  True False False\n",
+      "  True  True False False  True False False  True False False False False\n",
+      " False False  True  True False  True False False False  True False False\n",
+      " False False False  True]\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.feature_selection import SelectKBest, chi2\n",
     "\n",
@@ -63514,36 +63687,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(18995, 41) (18995,)\n",
+      "[LibSVM]"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SVR(C=1, cache_size=200, coef0=0.0, degree=3, epsilon=0.005, gamma='scale',\n",
+       "    kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=True)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.svm import SVR\n",
     "from sklearn.linear_model import Ridge\n",
     "from sklearn.neural_network import MLPRegressor\n",
     "\n",
+    "label = 'LABEL_Sepsis'\n",
     "heartrate_model = SVR(verbose=True, C=1, epsilon=0.005)\n",
     "#heartrate_model = Ridge(alpha=1.0)\n",
     "#heartrate_model = MLPRegressor(max_iter=50, hidden_layer_sizes=(200, 50), verbose=True)\n",
     "\n",
     "grouped_df = train_features_df.drop(['Time'], axis=1).groupby('pid', as_index=False, sort=False).agg(np.nanmean)\n",
     "\n",
-    "main_features = ['Heartrate', 'Temp', 'RRate', 'WBC', 'ABPd']\n",
+    "main_features = ['Lactate', 'RRate', 'AST', 'BUN', 'TroponinI',\n",
+    "       'Bilirubin_total', 'PTT', 'Bilirubin_direct']\n",
     "all_features = main_features + ['{}_diff'.format(a) for a in main_features] + ['{}_std'.format(a) for a in main_features] + ['{}_min'.format(a) for a in main_features] + ['{}_max'.format(a) for a in main_features]\n",
-    "all_features = all_features + ['Fever', 'Age']\n",
-    "most_relevant_heartrate_df = grouped_df[main_features]\n",
+    "all_features = all_features + ['Age']\n",
     "\n",
-    "most_relevant_heartrate_df_nonna = most_relevant_heartrate_df[~pd.isnull(most_relevant_heartrate_df).any(axis=1)]\n",
-    "\n",
-    "assert(most_relevant_heartrate_df.dropna().shape == most_relevant_heartrate_df_nonna.shape)\n",
-    "display(most_relevant_heartrate_df_nonna.index)\n",
-    "\n",
-    "X_heartrate_df = X_df.iloc[X_df.index.difference(most_relevant_heartrate_df_nonna.index), 1:][all_features]\n",
-    "display(X_heartrate_df.head(30))\n",
-    "X_heartrate = X_heartrate_df.to_numpy()\n",
-    "y_heartrate = train_labels_df.iloc[X_df.index.difference(most_relevant_heartrate_df_nonna.index), 1:][['LABEL_Heartrate']].to_numpy().ravel()\n",
+    "X_heartrate = X_df.iloc[:, 1:][all_features].to_numpy()\n",
+    "y_heartrate = train_labels_df.iloc[:, 1:][[label]].to_numpy().ravel()\n",
     "\n",
     "print(X_heartrate.shape, y_heartrate.shape)\n",
     "\n",
@@ -63552,7 +63739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63570,13 +63757,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "label = 'LABEL_Heartrate'\n",
     "X_heartrate = X_df.iloc[:, 1:][all_features].to_numpy()\n",
     "label_predictions_df = predict_label(heartrate_model, label, X_heartrate)\n",
     "\n",
