Fix task_4 dataset.generate_batches drop_last

--- a/task_4/task_4.ipynb
+++ b/task_4/task_4.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
     "    def __init__(self, triplet_labels_fp):\n",
     "        \"\"\"Create triplets from triplet_labels_fp\"\"\"\n",
     "        triplets = []\n",
-    "        for line in tqdm(open(triplet_labels_fp, 'r')):\n",
+    "        for line in open(triplet_labels_fp, 'r'):\n",
     "            anchor, positive, negative = tuple(map(int, line.split()))\n",
     "            triplets.append((anchor, positive, negative))\n",
     "        \n",
@@ -461,52 +461,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5562ba4feb414a3587ba1f8f8a4896ca",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=1.0, bar_style='info', max=1.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3bb191e4d7214dd98089ad59c5a4ce81",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=3719.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_set = TripletImageDataset('data/test_triplets.txt')\n",
     "\n",
@@ -516,7 +473,7 @@
     "    # List of tuples which the model chose as most similar\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
-    "        for anchor_img, positive_img, negative_img in tqdm(predict_set.generate_batches(batch_size, shuffle=False), total=len(predict_set) // batch_size):\n",
+    "        for anchor_img, positive_img, negative_img in tqdm(predict_set.generate_batches(batch_size, shuffle=False, drop_last=False), total=len(predict_set) // batch_size):\n",
     "            # Get embeddings from our model\n",
     "            anchor_emb = model(anchor_img)\n",
     "            positive_emb = model(positive_img)\n",
@@ -526,14 +483,22 @@
     "            labels = TripletLoss.closest(anchor_emb, positive_emb, negative_emb)\n",
     "\n",
     "            predict_set_choices.append(labels.cpu().numpy())\n",
-    "    return np.array(predict_set_choices).flatten()\n",
-    "\n",
+    "    result = np.array(predict_set_choices).flatten()\n",
+    "    return np.concatenate(result).ravel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "train_set_predictions = predict(train_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -553,13 +518,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cbdd363f113241e8b918520b5868b44f",
+       "model_id": "3db76438f6074fb5a35438bb524579f9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -584,10 +549,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3722 (3722,)\n",
+      "<class 'numpy.ndarray'>\n",
+      "59544 (59544,)\n",
+      "<class 'numpy.int32'>\n"
+     ]
+    }
+   ],
    "source": [
+    "print(len(test_set_predictions), test_set_predictions.shape)\n",
+    "print(type(test_set_predictions[0]))\n",
+    "test_set_predictions = np.concatenate(test_set_predictions).ravel()\n",
+    "print(len(test_set_predictions), test_set_predictions.shape)\n",
+    "print(type(test_set_predictions[0]))\n",
     "np.savetxt('data/submission.txt', test_set_predictions, fmt=\"%d\")"
    ]
   },
