Update task_4 with more epochs

--- a/task_4/task_4.ipynb
+++ b/task_4/task_4.ipynb
@@ -305,40 +305,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class TripletLoss(nn.Module):\n",
-    "    \n",
-    "    def __init__(self, margin=0.5):\n",
-    "        super(TripletLoss, self).__init__()\n",
-    "        self.margin = margin\n",
-    "        self.pairwise_dist = nn.PairwiseDistance(p=2)\n",
-    "    \n",
-    "    def forward(self, anchor, positive, negative):\n",
-    "        distance_pos = self.pairwise_dist(anchor, positive)\n",
-    "        distance_neg = self.pairwise_dist(anchor, negative)\n",
-    "        # Torch.relu(x) = max(0, x)\n",
-    "        losses = torch.relu(distance_pos - distance_neg + self.margin)\n",
-    "        return losses.mean()\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def closest(anchor, positive, negative):\n",
-    "        \"\"\"\n",
-    "        Returns: \n",
-    "            int: 1 if the anchor is more similar to the positive image. \n",
-    "                    0 if anchor is more similar to the negative image.\n",
-    "        \"\"\"\n",
-    "        pairwise_dist = nn.PairwiseDistance(p=2)\n",
-    "        distance_pos = pairwise_dist(anchor, positive)\n",
-    "        distance_neg = pairwise_dist(anchor, negative)\n",
-    "        return (~(distance_pos >= distance_neg).to(torch.bool)).to(torch.int32)\n",
-    "        "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -347,14 +313,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Training:\n",
     "    \n",
-    "    def start(self, model, dataset, batch_size):\n",
-    "        epochs = 15\n",
+    "    def start(self, model, dataset, batch_size, epochs=15, model_name='model.pth'):\n",
     "        nr_batches = len(dataset) // batch_size\n",
     "        progress_bar = tqdm(desc='', total=epochs * nr_batches,\n",
     "            leave=False\n",
@@ -363,6 +328,7 @@
     "        model.train()\n",
     "        for epoch in range(epochs):\n",
     "            running_loss = []\n",
+    "            running_pred = []\n",
     "            batches = dataset.generate_batches(batch_size)\n",
     "            for batch_index, (anchor_img, positive_img, negative_img) in enumerate(batches):\n",
     "                progress_bar.set_description_str(\"E {} | B {}\".format(\n",
@@ -381,6 +347,9 @@
     "                loss_t = loss.cpu().detach().numpy()\n",
     "                running_loss.append(loss_t)\n",
     "                \n",
+    "                predicted_labels = closest_image(anchor_out, positive_out, negative_out)\n",
+    "                running_pred.append(predicted_labels.cpu().numpy())\n",
+    "                \n",
     "                progress_bar.set_postfix_str(\"Loss={0:.3f}\".format(np.mean(running_loss)))\n",
     "                progress_bar.update()\n",
     "                \n",
@@ -388,11 +357,14 @@
     "            model_fp = 'trained_models/'\n",
     "            if not os.path.exists(model_fp):\n",
     "                os.makedirs(model_fp)\n",
-    "            torch.save(model.state_dict(), os.path.join(model_fp, 'model.pth'))\n",
-    "            \n",
+    "            torch.save(model.state_dict(), os.path.join(model_fp, model_name))\n",
+    "            # Compute accuracy\n",
+    "            predictions = np.array(running_pred).flatten()\n",
+    "            acc = accuracy(predictions, np.ones_like(predictions))\n",
+    "            # Update progress bar\n",
     "            progress_bar.write(\n",
-    "                \"[Epoch {}/{}]: Loss {}\".format(\n",
-    "                    epoch+1, epochs,  np.mean(running_loss)\n",
+    "                \"[Epoch {}/{}]: Loss {}, Acc {}\".format(\n",
+    "                    epoch+1, epochs,  np.mean(running_loss), acc\n",
     "                )\n",
     "            )\n",
     "            progress_bar.refresh()"
@@ -461,11 +433,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_set = TripletImageDataset('data/test_triplets.txt')\n",
+    "\n",
+    "def closest_image(anchor, positive, negative):\n",
+    "    \"\"\"\n",
+    "    Returns: \n",
+    "        int: 1 if the anchor is more similar to the positive image. \n",
+    "                0 if anchor is more similar to the negative image.\n",
+    "                \n",
+    "    Note:\n",
+    "        Works for batches. \n",
+    "        Each input tensor should have this shape: `N x W x H x C` \n",
+    "        where `N` is the number of samples.\n",
+    "    \"\"\"\n",
+    "    pairwise_dist = nn.PairwiseDistance(p=2)\n",
+    "    distance_pos = pairwise_dist(anchor, positive)\n",
+    "    distance_neg = pairwise_dist(anchor, negative)\n",
+    "    return (~(distance_pos >= distance_neg).to(torch.bool)).to(torch.int32)\n",
     "\n",
     "def predict(predict_set):\n",
     "    \"\"\"Predict 0/1 for the given predict_set (Dataset)\"\"\"\n",
@@ -480,7 +468,7 @@
     "            negative_emb = model(negative_img)\n",
     "\n",
     "            # Compute distances and the corresponding labels\n",
-    "            labels = TripletLoss.closest(anchor_emb, positive_emb, negative_emb)\n",
+    "            labels = closest_image(anchor_emb, positive_emb, negative_emb)\n",
     "\n",
     "            predict_set_choices.append(labels.cpu().numpy())\n",
     "    result = np.array(predict_set_choices).flatten()\n",
@@ -489,23 +477,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0348dc883d2f42e18322b15ef3b2dd90",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=3719.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "train_set_predictions = predict(train_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train set accuracy: 0.8964439365420812\n"
+      "Train set accuracy: 0.9456607577921532\n"
      ]
     }
    ],
@@ -518,13 +528,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3db76438f6074fb5a35438bb524579f9",
+       "model_id": "ca5c508ee058421a8a5126f613c483e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -544,29 +554,25 @@
     }
    ],
    "source": [
+    "last_test_set_predictions = test_set_predictions\n",
     "test_set_predictions = predict(test_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3722 (3722,)\n",
-      "<class 'numpy.ndarray'>\n",
       "59544 (59544,)\n",
       "<class 'numpy.int32'>\n"
      ]
     }
    ],
    "source": [
-    "print(len(test_set_predictions), test_set_predictions.shape)\n",
-    "print(type(test_set_predictions[0]))\n",
-    "test_set_predictions = np.concatenate(test_set_predictions).ravel()\n",
     "print(len(test_set_predictions), test_set_predictions.shape)\n",
     "print(type(test_set_predictions[0]))\n",
     "np.savetxt('data/submission.txt', test_set_predictions, fmt=\"%d\")"
@@ -616,11 +622,69 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Model loading"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b31bb25a5b0c4617a49bc9e336fb6eee",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=33471.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 1/9]: Loss 0.1367347687482834, Acc 0.8920744823877387\n",
+      "[Epoch 2/9]: Loss 0.12115588784217834, Acc 0.9058046517881151\n",
+      "[Epoch 3/9]: Loss 0.10844552516937256, Acc 0.9166106480236623\n",
+      "[Epoch 4/9]: Loss 0.09669335931539536, Acc 0.9263746974993278\n",
+      "[Epoch 5/9]: Loss 0.08912786096334457, Acc 0.9318029040064534\n",
+      "[Epoch 6/9]: Loss 0.08189882338047028, Acc 0.9374663888141974\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-60-a25d6334b072>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mbatch_size\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m16\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mTraining\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_set\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel_name\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'retrained_model.pth'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-59-bc5a380f74d8>\u001b[0m in \u001b[0;36mstart\u001b[1;34m(self, model, dataset, batch_size, epochs, model_name)\u001b[0m\n\u001b[0;32m     12\u001b[0m             \u001b[0mrunning_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m             \u001b[0mbatches\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdataset\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgenerate_batches\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m             \u001b[1;32mfor\u001b[0m \u001b[0mbatch_index\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0manchor_img\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpositive_img\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnegative_img\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatches\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m                 progress_bar.set_description_str(\"E {} | B {}\".format(\n\u001b[0;32m     16\u001b[0m                     \u001b[0mepoch\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_index\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-5-18f60d9e2186>\u001b[0m in \u001b[0;36mgenerate_batches\u001b[1;34m(self, batch_size, shuffle, drop_last)\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mimg1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimg2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimg3\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdataloader\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 30\u001b[1;33m             \u001b[1;32myield\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_img_to_tensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_img_to_tensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_img_to_tensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-5-18f60d9e2186>\u001b[0m in \u001b[0;36m_img_to_tensor\u001b[1;34m(self, img)\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_img_to_tensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mimg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpermute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mgenerate_batches\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshuffle\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdrop_last\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "model.load_state_dict(torch.load('trained_models/model.pth'))\n",
+    "model = model.to(device)\n",
+    "\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
+    "criterion = nn.TripletMarginLoss(margin=0.5)\n",
+    "\n",
+    "batch_size = 16\n",
+    "\n",
+    "Training().start(model, train_set, batch_size, epochs=9, model_name='retrained_model.pth')"
+   ]
   },
   {
    "cell_type": "code",
