--- a/task_4/task_4.ipynb
+++ b/task_4/task_4.ipynb
@@ -79,7 +79,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2df6bd500cf940a1a0d848c29bae77f6",
+       "model_id": "3e35f97d440d418cbf9e2b643ff1c122",
        "version_major": 2,
        "version_minor": 0
       },
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,22 @@
     "    \n",
     "    EMBEDDING_DIM=64\n",
     "    \n",
-    "    def __init__(self):\n",
+    "    def __init__(self, inp = 2208, h1=512, d=0.35):\n",
+    "        super(NeuralNet, self).__init__()\n",
+    "        self.fc = nn.Sequential(\n",
+    "            nn.Linear(inp, h1),\n",
+    "            nn.PReLU(),\n",
+    "            nn.BatchNorm1d(h1,eps=1e-05, momentum=0.1, affine=True),\n",
+    "            nn.Dropout(d),\n",
+    "            nn.Linear(h1, NeuralNet.EMBEDDING_DIM)\n",
+    "        )\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = x.reshape(x.size(0), -1)\n",
+    "        x = self.fc(x)\n",
+    "        return x\n",
+    "    \n",
+    "    \"\"\"def __init__(self):\n",
     "        super(NeuralNet, self).__init__()\n",
     "        self.conv = nn.Sequential(\n",
     "            nn.Conv2d(3, 32, 7),\n",
@@ -432,7 +447,7 @@
     "        x = self.conv(x)\n",
     "        x = x.reshape(x.size(0), -1)\n",
     "        x = self.fc(x)\n",
-    "        return x\n",
+    "        return x\"\"\"\n",
     "    \n",
     "    def init_weights(self, m):\n",
     "        if isinstance(m, nn.Conv2d):\n",
@@ -441,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 66,
    "metadata": {
     "scrolled": true
    },
@@ -1410,7 +1425,15 @@
       "    )\n",
       "    (norm5): BatchNorm2d(2208, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "  )\n",
-      "  (classifier): Linear(in_features=2208, out_features=128, bias=True)\n",
+      "  (classifier): NeuralNet(\n",
+      "    (fc): Sequential(\n",
+      "      (0): Linear(in_features=2208, out_features=512, bias=True)\n",
+      "      (1): PReLU(num_parameters=1)\n",
+      "      (2): BatchNorm1d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (3): Dropout(p=0.35, inplace=False)\n",
+      "      (4): Linear(in_features=512, out_features=64, bias=True)\n",
+      "    )\n",
+      "  )\n",
       ")\n"
      ]
     }
@@ -1472,7 +1495,7 @@
     "        model_ft = models.densenet161(pretrained=use_pretrained)\n",
     "        set_parameter_requires_grad(model_ft, feature_extract)\n",
     "        num_ftrs = model_ft.classifier.in_features\n",
-    "        model_ft.classifier = nn.Linear(num_ftrs, num_classes)\n",
+    "        model_ft.classifier = NeuralNet(inp=num_ftrs) \n",
     "        input_size = 224\n",
     "\n",
     "    elif model_name == \"inception\":\n",
@@ -1506,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1514,8 +1537,13 @@
      "output_type": "stream",
      "text": [
       "Params to learn:\n",
-      "\t classifier.weight\n",
-      "\t classifier.bias\n"
+      "\t classifier.fc.0.weight\n",
+      "\t classifier.fc.0.bias\n",
+      "\t classifier.fc.1.weight\n",
+      "\t classifier.fc.2.weight\n",
+      "\t classifier.fc.2.bias\n",
+      "\t classifier.fc.4.weight\n",
+      "\t classifier.fc.4.bias\n"
      ]
     }
    ],
@@ -1545,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 68,
    "metadata": {
     "scrolled": true
    },
@@ -1553,7 +1581,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2119c8eaa4b94926a6f55b6ec1f54dd1",
+       "model_id": "dc1391fbff3848e78b49f47c3cd698d3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1567,7 +1595,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8db6c1a5687c483fb0d82733cf74aa58",
+       "model_id": "ce161928d01e4f0eb877c6328d3174db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1584,13 +1612,25 @@
      "text": [
       "\n",
       "\r",
-      "[Epoch 1/15]: Loss 0.249 (0.200), Val Accuracy 0.6693277310924369, Train Accuracy 0.64418091367713\n"
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 1/15]: Loss 0.289 (0.413), Val Accuracy 0.6852941176470588, Train Accuracy 0.5994604820627802\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "705cc859e2594c5bb9b0a10bf7fc7e0e",
+       "model_id": "01ae820b55e04223a7c0e395e0447716",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1607,13 +1647,25 @@
      "text": [
       "\n",
       "\r",
-      "[Epoch 2/15]: Loss 0.162 (0.163), Val Accuracy 0.7067226890756303, Train Accuracy 0.69140625\n"
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 2/15]: Loss 0.308 (0.339), Val Accuracy 0.6978991596638655, Train Accuracy 0.6348970011210763\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6605223e9669493d863ac1ead5bf2683",
+       "model_id": "76195416444d40329963cd11704f05ae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1630,13 +1682,25 @@
      "text": [
       "\n",
       "\r",
-      "[Epoch 3/15]: Loss 0.138 (0.147), Val Accuracy 0.7096638655462185, Train Accuracy 0.7133898542600897\n"
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 3/15]: Loss 0.234 (0.306), Val Accuracy 0.7084033613445379, Train Accuracy 0.6495410594170403\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "094c784458744126a731fe65e4ba67be",
+       "model_id": "765a63f837a84ba39e828b63b4ededcc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1653,13 +1717,25 @@
      "text": [
       "\n",
       "\r",
-      "[Epoch 4/15]: Loss 0.162 (0.140), Val Accuracy 0.7222689075630252, Train Accuracy 0.7245305493273543\n"
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 4/15]: Loss 0.261 (0.283), Val Accuracy 0.7189075630252101, Train Accuracy 0.6575987948430493\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51c3ba45e49b44bfb6c210ca3c63df48",
+       "model_id": "4fb0e4c388d143df80039ea3d1508bdd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1676,13 +1752,25 @@
      "text": [
       "\n",
       "\r",
-      "[Epoch 5/15]: Loss 0.155 (0.133), Val Accuracy 0.7327731092436974, Train Accuracy 0.7374054091928252\n"
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 5/15]: Loss 0.190 (0.266), Val Accuracy 0.7096638655462185, Train Accuracy 0.663642096412556\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c30036742a44b0c9dce45d557fbb1a4",
+       "model_id": "3d5dec18a8fa45a0bf9e598d9f260fe9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1699,13 +1787,25 @@
      "text": [
       "\n",
       "\r",
-      "[Epoch 6/15]: Loss 0.133 (0.129), Val Accuracy 0.7378151260504202, Train Accuracy 0.745323010089686\n"
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 6/15]: Loss 0.154 (0.247), Val Accuracy 0.7235294117647059, Train Accuracy 0.6737668161434978\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bbc6c520561d4bfd948f99b4aa32a35c",
+       "model_id": "d2e00f4353ec4249bd5e3f5182227c74",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1722,13 +1822,25 @@
      "text": [
       "\n",
       "\r",
-      "[Epoch 7/15]: Loss 0.165 (0.125), Val Accuracy 0.753781512605042, Train Accuracy 0.7506831558295964\n"
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 7/15]: Loss 0.297 (0.233), Val Accuracy 0.7243697478991596, Train Accuracy 0.6800903867713004\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "29848b8bc5134fc399962567ede3deca",
+       "model_id": "13995c5186ff43f2a19d17f792a27ab2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1745,13 +1857,25 @@
      "text": [
       "\n",
       "\r",
-      "[Epoch 8/15]: Loss 0.104 (0.123), Val Accuracy 0.7588235294117647, Train Accuracy 0.754326653587444\n"
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 8/15]: Loss 0.169 (0.220), Val Accuracy 0.7289915966386554, Train Accuracy 0.690845711883408\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce98ef1b4b914761bfc5d925b0bb9fbc",
+       "model_id": "1b1b95d50b9944cc8b9722d8d85576b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1768,13 +1892,25 @@
      "text": [
       "\n",
       "\r",
-      "[Epoch 9/15]: Loss 0.098 (0.120), Val Accuracy 0.7567226890756302, Train Accuracy 0.7583380044843049\n"
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 9/15]: Loss 0.192 (0.211), Val Accuracy 0.7441176470588236, Train Accuracy 0.6938586042600897\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2cdac04c2d844c9dbdb61f36e5c9124d",
+       "model_id": "01a11a6e47264116be98a68c076dedd2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1791,13 +1927,25 @@
      "text": [
       "\n",
       "\r",
-      "[Epoch 10/15]: Loss 0.136 (0.119), Val Accuracy 0.7672268907563026, Train Accuracy 0.7638207679372198\n"
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 10/15]: Loss 0.245 (0.203), Val Accuracy 0.7525210084033613, Train Accuracy 0.6981852578475336\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "357cc2730a7e446d82fd6e1b22fe73c8",
+       "model_id": "ffed1d68c929408c8959cdef3071f7bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1814,13 +1962,25 @@
      "text": [
       "\n",
       "\r",
-      "[Epoch 11/15]: Loss 0.121 (0.117), Val Accuracy 0.7596638655462185, Train Accuracy 0.7672715807174888\n"
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 11/15]: Loss 0.138 (0.197), Val Accuracy 0.7521008403361344, Train Accuracy 0.6957153867713004\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90f062cce4dd4537b260d7daacc995bf",
+       "model_id": "bfc75a7e24f24abbbdf277d28f5b7295",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1837,13 +1997,25 @@
      "text": [
       "\n",
       "\r",
-      "[Epoch 12/15]: Loss 0.147 (0.115), Val Accuracy 0.7655462184873949, Train Accuracy 0.7714756165919282\n"
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 12/15]: Loss 0.184 (0.186), Val Accuracy 0.7483193277310924, Train Accuracy 0.7045263452914798\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7884fbef305437786c0fea7b534b27c",
+       "model_id": "d5f414a4f9d64d519859eb227ddba998",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1860,13 +2032,25 @@
      "text": [
       "\n",
       "\r",
-      "[Epoch 13/15]: Loss 0.088 (0.115), Val Accuracy 0.7609243697478991, Train Accuracy 0.7696538677130045\n"
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 13/15]: Loss 0.175 (0.178), Val Accuracy 0.7441176470588236, Train Accuracy 0.711252802690583\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5351516ed7a24a9abd7a582b4f96d7fb",
+       "model_id": "2b1a53625c1845d7af2e54a2990f9b89",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1883,13 +2067,25 @@
      "text": [
       "\n",
       "\r",
-      "[Epoch 14/15]: Loss 0.088 (0.112), Val Accuracy 0.7705882352941177, Train Accuracy 0.7757497197309418\n"
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 14/15]: Loss 0.108 (0.172), Val Accuracy 0.7445378151260504, Train Accuracy 0.7141430773542601\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22c106fe8eaf42319b2066ca2128cef5",
+       "model_id": "0fc38628e9f04952a4743275e6d80960",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1906,7 +2102,19 @@
      "text": [
       "\n",
       "\r",
-      "[Epoch 15/15]: Loss 0.102 (0.111), Val Accuracy 0.7689075630252101, Train Accuracy 0.7782371076233184\n"
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 15/15]: Loss 0.170 (0.166), Val Accuracy 0.7563025210084033, Train Accuracy 0.7200987948430493\n"
      ]
     }
    ],
@@ -1932,13 +2140,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6adc6ad2967d4b48bc388784c732ac81",
+       "model_id": "29d2764a3f664535af822a5d968a3146",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1963,14 +2171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train set accuracy [pre-trained model]: 0.7725172401722267\n"
+      "Train set accuracy [pre-trained model]: 0.7536143102180838\n"
      ]
     }
    ],
@@ -1980,13 +2188,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "809d257609c14c919cc691e9315140fc",
+       "model_id": "de78cd5810a741b2a6cd3d31c66a2c38",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2012,7 +2220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
